Updated with new changes

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Rajat\AppData\Local\Temp\testng-eclipse-650666679\testng-customsuite.xml</span>
+                    <span>C:\Users\Rajat\AppData\Local\Temp\testng-eclipse--1037291283\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="testClasses.CompareProjectsTest" class="method navigator-link" hash-for-method="compareProjects">compareProjects</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="testClasses.FiltersTest" class="method navigator-link" hash-for-method="projectStatus">projectStatus</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,14 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">testClasses.CompareProjectsTest</span>
+              <span class="class-name">testClasses.FiltersTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="compareProjects">
-                  </a> <!-- compareProjects -->
-                  <span class="method-name">compareProjects</span>
+                  <a name="projectStatus">
+                  </a> <!-- projectStatus -->
+                  <span class="method-name">projectStatus</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Rajat\AppData\Local\Temp\testng-eclipse-650666679\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Rajat\AppData\Local\Temp\testng-eclipse--1037291283\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,11 +145,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;testClasses.CompareProjectsTest&quot;&gt;
+      &lt;class name=&quot;testClasses.FiltersTest&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;compareProjects&quot;/&gt;
+          &lt;include name=&quot;projectStatus&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- testClasses.CompareProjectsTest --&gt;
+      &lt;/class&gt; &lt;!-- testClasses.FiltersTest --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -191,14 +191,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'compareProjects')
-data.setCell(0, 2, 'testClasses.CompareProjectsTest')
-data.setCell(0, 3, 23282);
+data.setCell(0, 1, 'projectStatus')
+data.setCell(0, 2, 'testClasses.FiltersTest')
+data.setCell(0, 3, 2936);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 23 seconds</span>
+              <span class="suite-total-time">Total running time: 2 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -224,14 +224,14 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">testClasses.CompareProjectsTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">testClasses.FiltersTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
-                <span class="method-name">steup</span>
+                <span class="method-name">setup</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">compareProjects</span>
-                <span class="method-start">3276 ms</span>
+                <span class="method-name">projectStatus</span>
+                <span class="method-start">5311 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
